[package]
name = "alaska"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Request free crates.io package at https://github.com/kyper-io/alaska/issues"
homepage = "https://github.com/kyper-io/alaska"
documentation = "https://docs.rs/alaska"
repository = "https://github.com/kyper-io/alaska"
readme = "README.md"

[dependencies]
