# SPDX-FileCopyrightText: © 2022 Alaska Authors
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "alaska"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A high-level stream-based functional API for developing event-driven reactive applications"
homepage = "https://kyper.io/alaska"
documentation = "https://docs.rs/alaska"
repository = "https://github.com/kyper-io/alaska"
readme = "../../README.md"

[dependencies]
